--- a/src/components/ControlPanel/ControlPanel.css
+++ b/src/components/ControlPanel/ControlPanel.css
@@ -187,6 +187,21 @@
   background: transparent url('../../images/icons/closeButton.svg') no-repeat;
 }
 
+.controlPanel__form-image-block {
+  margin: 20px 0 0 0;
+  padding: 0 10px 0 10px;
+  display: flex;
+}
+
+.controlPanel__form-drop-area {
+  border: 2px dashed #000;
+  width: 100%;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (max-width: 450px){
   .controlPanel__form {
     width: 260px;
