--- a/src/components/Bulkupload/Bulkupload.css
+++ b/src/components/Bulkupload/Bulkupload.css
@@ -4,8 +4,8 @@
 
 .bulkUpload__container {
   margin: 0 auto;
-  width: 90%;
-  max-width: 90%;
+  width: 95%;
+  max-width: 95%;
 }
 
 .bulkUpload__title {
@@ -44,4 +44,12 @@
   overflow: hidden;
   padding: 0;
   margin: 0;
+}
+
+.table {
+  border-collapse: collapse;
+  text-align: left;
+  vertical-align: top;
+  width: 100%;
+  margin: 20px 0 0 0;
 }
