--- a/src/components/ControlPanel/ControlPanel.css
+++ b/src/components/ControlPanel/ControlPanel.css
@@ -136,6 +136,11 @@
   margin: 0;
 }
 
+.color-red {
+  color: red;
+  font-weight: 700;
+}
+
 @media screen and (max-width: 450px){
   .controlPanel__form {
     width: 260px;
